apps/microshift/ai-codegenerator/manifests/etc/microshift/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-codegenerator
  namespace: tools
  labels:
    app: ai-codegenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-codegenerator
  template:
    metadata:
      labels:
        app: ai-codegenerator
    spec:
      containers:
      - name: codegen-inference
        image: quay.io/redhat-et/locallm-codegen:latest
        ports:
        - containerPort: 8501
          protocol: TCP
        securityContext:
          runAsNonRoot: true
      - name: codegen-model-service
        image: quay.io/redhat-et/locallm-model-service:latest
        ports:
        - containerPort: 8001
          protocol: TCP
        securityContext:
          runAsNonRoot: true
        volumeMounts:
        - name: model-file
          mountPath: /model
      volumes:
      - name: model-file
        emptyDir: {}
