apps/microshift/ai-codegenerator/manifests/etc/microshift/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-codegenerator-service
  namespace: tools
  labels:
    app: ai-codegenerator
spec:
  selector:
    app: ai-codegenerator
  ports:
  - name: ui
    port: 8501
    targetPort: 8501
    protocol: TCP
  - name: model-service
    port: 8001
    targetPort: 8001
    protocol: TCP
